# Petshoop-leo

./: .dockerignore  .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  fly.toml  pos-release.sh  pyproject.toml  pytets.ini
.github/workflows/: petshopp
contrib/: env_sample
pet/: settings.py  urls.py
pet/base/: admin.py  models.py  urls.py  views.py
pet/base/migrations/: 0001_initial.py
pet/base/static/css/: styles.css
pet/base/templates/base/: base.html  footer.html  home.html
pet/base/tests/: test_home.py
pet/produtos/: admin.py  models.py  urls.py  views.py
pet/produtos/migrations/: 0001_initial.py  0002_servico_imagem.py
pet/produtos/templates/produtos/: produtos.html  servicos.html
staticfiles/css/: style.css  styles.css
